--- a/src/projeto/tela/FormPrincipal.form
+++ b/src/projeto/tela/FormPrincipal.form
@@ -318,6 +318,9 @@
                 <Property name="accelerator" type="javax.swing.KeyStroke" editor="org.netbeans.modules.form.editors.KeyStrokeEditor">
                   <KeyStroke key="F7"/>
                 </Property>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="3" name="/projeto/icones/if_administrator1_(add)_16x16_9713.gif"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Cadastro de Colaboradores"/>
               </Properties>
               <Events>
@@ -445,7 +448,7 @@
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <Component id="jLabelimgFundo" pref="493" max="32767" attributes="0"/>
+                  <Component id="jLabelimgFundo" pref="637" max="32767" attributes="0"/>
                   <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -484,7 +487,7 @@
                   <Component id="jLabelLogado" min="-2" pref="185" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jSeparatorUserFinal" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="444" max="32767" attributes="0"/>
+                  <EmptySpace pref="541" max="32767" attributes="0"/>
                   <Component id="jSeparatorData" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jLabelDataIcon" min="-2" max="-2" attributes="0"/>
